--- a/wwwroot/css/app.css
+++ b/wwwroot/css/app.css
@@ -1,5 +1,11 @@
 ﻿@import url('open-iconic/font/css/open-iconic-bootstrap.min.css');
 
+@font-face {
+  font-family: 'linjapimeja1.9';
+  src:  url('linjapimeja19.woff2') format('woff2'),
+        url('linjapimeja19.woff') format('woff');
+}
+
 html, body {
     font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
@@ -22,8 +28,6 @@ app {
 
 .tokipona {
     font-family: 'linjapimeja1.9';
-    src: url('linjapimeja19.woff2') format('woff2'),
-        url('linjapimeja19.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-size: 32pt;
